--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["nodejs_20"]
+nixPkgs = ["nodejs_20", "yarn"]
 
 [phases.install]
-cmds = ["corepack enable && yarn install"]
+cmds = ["yarn install --mode=update-lockfile || yarn install"]
 
 [phases.build]
 cmds = ["yarn build"]
