--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_20", "yarn"]
 
 [phases.install]
-cmds = ["yarn install --immutable --immutable-cache"]
+cmds = ["yarn install"]
 
 [phases.build]
 cmds = ["yarn build"]
