Add initialization endpoint for publishable API key

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["yarn install"]
 cmds = ["yarn build"]
 
 [start]
-cmd = "npx medusa db:migrate && yarn seed && yarn start"
+cmd = "npx medusa db:migrate && yarn start"
